--- a/thesis/06-intro.html
+++ b/thesis/06-intro.html
@@ -9,8 +9,8 @@
 <!-- end bbinclude -->
 </head>
 <body>
-<!-- #bbinclude "page-header-small-9.incl" -->
-<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"><p class="well" style="height: 51px;"> </p></div>
+<!-- #bbinclude "page-header-small.incl" -->
+<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-10"><div id="nav-jh"><p class="well" style="height: 51px;"> </p></div>
 <!-- end bbinclude -->
 <!-- #bbinclude "heading-thesis.incl" -->
 <h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
@@ -513,8 +513,8 @@
 				<b> <a href="00-front.html">First</a> | <a href="05-abbreviations.html">Prev</a> | <a href="index.html">HOME</a> | <a href="07-development.html">Next</a> | <a href="14-addendum.html">Last</a> </b>
 			</div>
 
-<!-- #bbinclude "footer-9.incl" -->
-</article><!-- /.col-md-9 --><aside class="col-md-3"><nav class="navigation" id="nav-hhp"></nav></aside><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"><div class="row"><div class="col-md-12"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></div><!-- /.col-md-12 --></div><!-- /.row --></footer><!-- /.container -->
+<!-- #bbinclude "footer.incl" -->
+</article><!-- /.col-md-10 --><aside class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></aside><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"><div class="row"><div class="col-md-12"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></div><!-- /.col-md-12 --></div><!-- /.row --></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="/_assets/js/footer-js.js"></script>
 
